updated the mission section, logo removed and fixed the spacing

--- a/css/about.css
+++ b/css/about.css
@@ -12,16 +12,22 @@
   display: grid;
   align-items: center;
   justify-items: center;
-
+  border: 1px solid black;
   background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 0.5rem;
+  border-radius: 0 3.5rem;
   padding: 3rem 1rem;
   position: relative; /* used for animation using gsap*/
   left: 1400px; /* used for animation using gsap*/
 }
+.hero-wrapper:hover {
+  background-color: rgba(255, 255, 255, 1);
+}
 .mission-area {
+  padding: 12rem 0;
+}
+.mission-card-wrapper {
+  margin-top: 5rem;
   gap: 5rem;
-  padding: 6rem 0;
 }
 .mission-vision-title {
   margin-bottom: 0rem;
@@ -46,7 +52,7 @@
 @media screen and (min-width: 47em) and (max-width: 80em) {
   .mission-area {
     gap: 2rem;
-    padding: 1rem 0;
+    padding: 5rem 0;
   }
   .mission-vision-title {
     margin-bottom: 0rem;
@@ -63,8 +69,10 @@
     padding: 1rem 0;
   }
 }
+
+/* team */
 .team-card-image {
-  height: 22rem;
+  height: 18rem;
   object-fit: cover;
   object-position: top center;
   width: 100%;
